feat: harden sessions and plan/act checkpoints

--- a/v1.0.0.md
+++ b/v1.0.0.md
@@ -9,7 +9,7 @@ Ship a stable, production-ready `v1.0.0` where core collaboration + agent workfl
 - [x] build health gate passes
   - `pnpm run typecheck`
   - `pnpm run lint`
-  - `pnpm test` (79/79 passing)
+  - `pnpm test` (90 passing, 3 skipped)
 - [x] openai provider live smoke test passes with `.env.local`
   - model: `gpt-4.1-mini`
   - prompt reply: `smoke-ok`
@@ -27,14 +27,14 @@ Ship a stable, production-ready `v1.0.0` where core collaboration + agent workfl
 - [x] ui timeline test (events shown in chat in correct order)
 
 ### 3) session manager reliability (supabase)
-- [ ] save/list/load session test with real supabase table
-- [ ] share-link test (`?shareSession=` restores expected chat state)
-- [ ] migration/backward compatibility test for missing/partial payload fields
+- [ ] save/list/load session test with real supabase table (`tests/api.system.sessions.spec.ts` is in place, but skipped until `VITE_SUPABASE_URL` is a real URL)
+- [ ] share-link test (`?shareSession=` restores expected chat state) (depends on real supabase config)
+- [ ] migration/backward compatibility test for missing/partial payload fields (depends on real supabase config)
 
 ### 4) plan/act checkpoint workflow
-- [ ] plan generation quality test (clear, actionable numbered steps)
-- [ ] act mode checkpoint test (confirm, stop, revert all verified)
-- [ ] diff visibility test at each checkpoint
+- [x] plan generation quality test (clear, actionable numbered steps)
+- [x] act mode checkpoint test (confirm, stop, revert all verified)
+- [x] diff visibility test at each checkpoint
 
 ### 5) test + security automation quality
 - [ ] eslint + vuln scan execution test from ui button
@@ -84,10 +84,12 @@ Ship a stable, production-ready `v1.0.0` where core collaboration + agent workfl
 ## verification added in this sprint
 - `scripts/collaboration-server.spec.ts`: sync, persistence across restart, inactive cleanup.
 - `app/lib/runtime/interactive-step-runner.spec.ts`: websocket streaming + stop-on-error.
-- `app/lib/runtime/agent-workflow.spec.ts`: act-mode stop/revert checkpoint flow.
+- `app/lib/runtime/agent-workflow.spec.ts`: plan parsing + act-mode stop/revert checkpoint flow.
+- `app/lib/runtime/agent-file-diffs.spec.ts`: per-step file delta + checkpoint diff formatting.
 - `app/lib/runtime/model-orchestrator.spec.ts`: low/medium/high routing + manual override.
 - `app/lib/services/deploymentWizard.spec.ts`: generated workflow validation + rollback endpoints.
 - `app/lib/services/pluginManager.spec.ts`: manifest validation, runtime load, malformed marketplace handling.
+- `app/lib/services/session-payload.spec.ts`: session payload normalization/backward-compat.
 - `app/components/chat/StepRunnerFeed.spec.tsx`: chat step timeline ordering + clear behavior.
 - `app/lib/stores/performance.spec.ts`: token usage accumulation across responses.
 - `tests/api.system.performance.spec.ts`: node cpu/memory sampling endpoint behavior.
