chore: add supabase sessions setup

--- a/v1.0.0.md
+++ b/v1.0.0.md
@@ -27,9 +27,9 @@ Ship a stable, production-ready `v1.0.0` where core collaboration + agent workfl
 - [x] ui timeline test (events shown in chat in correct order)
 
 ### 3) session manager reliability (supabase)
-- [ ] save/list/load session test with real supabase table (`tests/api.system.sessions.spec.ts` is in place, but skipped until `VITE_SUPABASE_URL` is a real URL)
-- [ ] share-link test (`?shareSession=` restores expected chat state) (depends on real supabase config)
-- [ ] migration/backward compatibility test for missing/partial payload fields (depends on real supabase config)
+- [ ] save/list/load session test with real supabase table (`tests/api.system.sessions.spec.ts` runs once `public.bolt_sessions` exists; see `docs/supabase/bolt_sessions.sql`)
+- [ ] share-link test (`?shareSession=` restores expected chat state) (depends on real supabase config + table)
+- [ ] migration/backward compatibility test for missing/partial payload fields (depends on real supabase config + table)
 
 ### 4) plan/act checkpoint workflow
 - [x] plan generation quality test (clear, actionable numbered steps)
