docs: mark sessions checklist complete

--- a/v1.0.0.md
+++ b/v1.0.0.md
@@ -9,7 +9,7 @@ Ship a stable, production-ready `v1.0.0` where core collaboration + agent workfl
 - [x] build health gate passes
   - `pnpm run typecheck`
   - `pnpm run lint`
-  - `pnpm test` (90 passing, 3 skipped)
+  - `pnpm test` (93 passing, 0 skipped)
 - [x] openai provider live smoke test passes with `.env.local`
   - model: `gpt-4.1-mini`
   - prompt reply: `smoke-ok`
@@ -27,9 +27,14 @@ Ship a stable, production-ready `v1.0.0` where core collaboration + agent workfl
 - [x] ui timeline test (events shown in chat in correct order)
 
 ### 3) session manager reliability (supabase)
-- [ ] save/list/load session test with real supabase table (`tests/api.system.sessions.spec.ts` runs once `public.bolt_sessions` exists; see `docs/supabase/bolt_sessions.sql`)
-- [ ] share-link test (`?shareSession=` restores expected chat state) (depends on real supabase config + table)
-- [ ] migration/backward compatibility test for missing/partial payload fields (depends on real supabase config + table)
+- [x] save/list/load session test with real supabase table (`tests/api.system.sessions.spec.ts`)
+  - requires `public.bolt_sessions` (apply `docs/supabase/bolt_sessions.sql`)
+- [x] share-link test (`?shareSession=` restores expected chat state)
+  - system test: `tests/api.system.sessions.spec.ts` (share_slug -> session payload)
+  - ui e2e: `node scripts/e2e-sessions-share-link.mjs` (screenshot: `docs/screenshots/share-session-e2e.png`)
+- [x] migration/backward compatibility test for missing/partial payload fields
+  - system test: `tests/api.system.sessions.spec.ts` (missing prompts/responses/diffs)
+  - unit test: `app/lib/services/session-payload.spec.ts`
 
 ### 4) plan/act checkpoint workflow
 - [x] plan generation quality test (clear, actionable numbered steps)
@@ -90,6 +95,7 @@ Ship a stable, production-ready `v1.0.0` where core collaboration + agent workfl
 - `app/lib/services/deploymentWizard.spec.ts`: generated workflow validation + rollback endpoints.
 - `app/lib/services/pluginManager.spec.ts`: manifest validation, runtime load, malformed marketplace handling.
 - `app/lib/services/session-payload.spec.ts`: session payload normalization/backward-compat.
+- `scripts/e2e-sessions-share-link.mjs`: headless share-link restore smoke test + screenshot artifact.
 - `app/components/chat/StepRunnerFeed.spec.tsx`: chat step timeline ordering + clear behavior.
 - `app/lib/stores/performance.spec.ts`: token usage accumulation across responses.
 - `tests/api.system.performance.spec.ts`: node cpu/memory sampling endpoint behavior.
