feat: complete v1.0.0 quality gates

--- a/v1.0.0.md
+++ b/v1.0.0.md
@@ -9,7 +9,7 @@ Ship a stable, production-ready `v1.0.0` where core collaboration + agent workfl
 - [x] build health gate passes
   - `pnpm run typecheck`
   - `pnpm run lint`
-  - `pnpm test` (93 passing, 0 skipped)
+  - `pnpm test` (109 passing, 0 skipped)
 - [x] openai provider live smoke test passes with `.env.local`
   - model: `gpt-4.1-mini`
   - prompt reply: `smoke-ok`
@@ -42,14 +42,22 @@ Ship a stable, production-ready `v1.0.0` where core collaboration + agent workfl
 - [x] diff visibility test at each checkpoint
 
 ### 5) test + security automation quality
-- [ ] eslint + vuln scan execution test from ui button
-- [ ] jest stub generation quality test for newly added functions
-- [ ] failure reporting test (clear suggested fixes in ui)
+- [x] eslint + vuln scan execution test from ui button
+  - `app/lib/stores/workbench.test-and-scan.spec.ts`
+  - `app/lib/runtime/test-security.spec.ts`
+- [x] jest stub generation quality test for newly added functions
+  - `app/lib/runtime/test-security.spec.ts`
+- [x] failure reporting test (clear suggested fixes in ui)
+  - `app/components/chat/StepRunnerFeed.spec.tsx`
 
 ### 6) multi-modal prompt flow
-- [ ] voice-to-text prompt insertion test (mic start/stop + transcript accuracy)
-- [ ] sketch json export test (rect + text structures valid)
-- [ ] prompt merge test (text + sketch payload both reach model input)
+- [x] voice-to-text prompt insertion test (mic start/stop + transcript accuracy)
+  - `app/components/chat/SpeechRecognition.spec.tsx`
+  - `app/components/chat/BaseChat.speech-recognition.spec.tsx`
+- [x] sketch json export test (rect + text structures valid)
+  - `app/components/chat/SketchCanvas.spec.tsx`
+- [x] prompt merge test (text + sketch payload both reach model input)
+  - `app/lib/services/prompt-merge.spec.ts`
 
 ### 7) model orchestrator confidence
 - [x] low/medium/high complexity routing tests with deterministic fixtures
@@ -63,8 +71,11 @@ Ship a stable, production-ready `v1.0.0` where core collaboration + agent workfl
 
 ### 9) deployment wizard safety
 - [x] generated workflow yaml validation test (netlify/vercel/github-pages)
-- [ ] deploy trigger test from ui
-- [ ] rollback api test with provider sandbox tokens
+- [x] deploy trigger test from ui
+  - `app/components/@settings/tabs/features/FeaturesTab.deploymentWizard.spec.tsx`
+- [x] rollback api test
+  - route: `tests/api.system.deployment-rollback.spec.ts`
+  - service: `app/lib/services/deploymentWizard.spec.ts`
 
 ### 10) plugin marketplace safety
 - [x] manifest schema validation test (reject invalid plugin manifests)
@@ -72,9 +83,16 @@ Ship a stable, production-ready `v1.0.0` where core collaboration + agent workfl
 - [x] marketplace fetch failure handling test (network + malformed json)
 
 ### 11) release docs and packaging
-- [ ] finalize `README.md` and install flow against fresh machine checklist
-- [ ] verify product naming consistency (`bolt.gives v1.0.0`) across ui/scripts/meta
-- [ ] prepare changelog + one-feature-per-pr backport plan for upstream
+- [x] finalize `README.md` and install flow against fresh machine checklist
+  - `README.md`
+  - `docs/fresh-install-checklist.md`
+  - `scripts/install-bolt-gives.sh`
+- [x] verify product naming consistency (`bolt.gives v1.0.0`) across ui/scripts/meta
+  - `pre-start.cjs`, `electron-builder.yml`, `electron-update.yml`
+  - `app/lib/api/updates.ts`, `app/routes/api.bug-report.ts`
+- [x] prepare changelog + one-feature-per-pr backport plan for upstream
+  - `CHANGELOG.md`
+  - `UPSTREAM_BACKPORT_PLAN.md`
 
 ## step-by-step dev plan
 1. lock release baseline by keeping typecheck/lint/test green on every change.
@@ -93,10 +111,18 @@ Ship a stable, production-ready `v1.0.0` where core collaboration + agent workfl
 - `app/lib/runtime/agent-file-diffs.spec.ts`: per-step file delta + checkpoint diff formatting.
 - `app/lib/runtime/model-orchestrator.spec.ts`: low/medium/high routing + manual override.
 - `app/lib/services/deploymentWizard.spec.ts`: generated workflow validation + rollback endpoints.
+- `tests/api.system.deployment-rollback.spec.ts`: rollback api route behavior.
 - `app/lib/services/pluginManager.spec.ts`: manifest validation, runtime load, malformed marketplace handling.
 - `app/lib/services/session-payload.spec.ts`: session payload normalization/backward-compat.
+- `app/lib/runtime/test-security.spec.ts`: lint/security/test step definitions + stub generation behavior.
+- `app/lib/stores/workbench.test-and-scan.spec.ts`: end-to-end test & scan runner execution.
 - `scripts/e2e-sessions-share-link.mjs`: headless share-link restore smoke test + screenshot artifact.
 - `app/components/chat/StepRunnerFeed.spec.tsx`: chat step timeline ordering + clear behavior.
+- `app/components/chat/SpeechRecognition.spec.tsx`: mic start/stop button behavior.
+- `app/components/chat/BaseChat.speech-recognition.spec.tsx`: speech transcript piped into input.
+- `app/components/chat/SketchCanvas.spec.tsx`: sketch elements export (text + rect).
+- `app/lib/services/prompt-merge.spec.ts`: prompt merge of sketch + selected element payload.
+- `app/components/@settings/tabs/features/FeaturesTab.deploymentWizard.spec.tsx`: deployment workflow generation + rollback UI wiring.
 - `app/lib/stores/performance.spec.ts`: token usage accumulation across responses.
 - `tests/api.system.performance.spec.ts`: node cpu/memory sampling endpoint behavior.
 - `app/components/workbench/PerformanceMonitor.spec.tsx`: threshold warning recommendation rendering.
