docs: update release notes and ghcr publish

--- a/v1.0.0.md
+++ b/v1.0.0.md
@@ -1,6 +1,6 @@
 # bolt.gives v1.0.0 - superior point plan
 
-last updated: 2026-02-12
+last updated: 2026-02-13
 
 ## goal
 Ship a stable, production-ready `v1.0.0` where core collaboration + agent workflows are reliable, observable, secure, and documented.
@@ -10,6 +10,8 @@ Ship a stable, production-ready `v1.0.0` where core collaboration + agent workfl
   - `pnpm run typecheck`
   - `pnpm run lint`
   - `pnpm test` (109 passing, 0 skipped)
+- [x] typecheck no longer depends on generated remix build output
+  - tracks a type-only stub at `build/server.d.ts` (real module is generated at build time)
 - [x] openai provider live smoke test passes with `.env.local`
   - model: `gpt-4.1-mini`
   - prompt reply: `smoke-ok`
