docs: mark v1.0.2 progress and refresh agents guide

--- a/1.0.2.md
+++ b/1.0.2.md
@@ -5,6 +5,22 @@ Date: 2026-02-16
 ## Goal
 Define a focused, high-impact feature set for `v1.0.2` based on what developers are actively asking for in agentic coding products.
 
+## Delivery Status (Updated: 2026-02-17)
+
+- [x] P0.1 Live Development Commentary Stream
+  - Shipped in `970f1e3` (`feat: stream live development commentary in execution timeline`)
+  - Commentary is now streamed as a separate protocol event and shown in timeline UI.
+- [x] P0.2 Agent Anti-Stall + Auto-Recovery
+  - Shipped in `e81c073` (`feat: add anti-stall recovery with auto-finalize fallback`)
+  - Detects repeated tool loops, no-progress streaks, and stream timeouts; applies backoff and recovery.
+- [~] P0.5 Reliability Guardrails for Web/Tool Tasks (partial)
+  - Strict tool schema compatibility fix landed (`83b7857`) for `web_search` schema validation issues.
+  - Remaining work: full cross-provider regression suite and compatibility matrix.
+- [ ] P0.3 Execution Transparency Panel
+- [ ] P0.4 Safer Autonomy Modes
+- [ ] P1.6 Persistent Project Memory (Scoped)
+- [ ] P1.7 Sub-Agent Framework (Minimal)
+
 ## How This Was Researched
 Used Bolt.gives' Playwright-powered web browsing/search service to gather current requests from:
 - Cursor Ideas forum
@@ -41,35 +57,35 @@ Used Bolt.gives' Playwright-powered web browsing/search service to gather curren
 ## Recommended v1.0.2 Feature Set
 
 ## P0 (Ship in v1.0.2)
-1. Live Development Commentary Stream
+[x] 1. Live Development Commentary Stream
 - Stream concise step-by-step commentary while coding (plan -> action -> verification -> next step).
 - Separate commentary from code/actions in the protocol and UI.
 - Why: highest trust/value gain, directly addresses silent-agent frustration.
 
-2. Agent Anti-Stall + Auto-Recovery
+[x] 2. Agent Anti-Stall + Auto-Recovery
 - Detect "stuck" states (repeated tool calls, no-progress loops, timeouts).
 - Auto-recover by: retry strategy, tool backoff, summarize-and-continue, or explicit recovery prompt.
 - Show recovery state in commentary timeline.
 
-3. Execution Transparency Panel
+[ ] 3. Execution Transparency Panel
 - Show: selected model, tool invocations, active step, elapsed time, and token/cost estimate.
 - Include explicit "why this action" snippets for each major step.
 
-4. Safer Autonomy Modes
+[ ] 4. Safer Autonomy Modes
 - Add clear execution modes: `read-only`, `review-required`, `auto-apply-safe`, `full-auto`.
 - Add per-tool approval policy controls and visible current mode in UI.
 
-5. Reliability Guardrails for Web/Tool Tasks
+[~] 5. Reliability Guardrails for Web/Tool Tasks
 - Standardize tool schemas for strict providers.
 - Add robust URL/tool validation and user-facing fallback messages.
 - Add regression tests for schema compatibility across major model families.
 
 ## P1 (Start in v1.0.2, finish in v1.0.3 if needed)
-6. Persistent Project Memory (Scoped)
+[ ] 6. Persistent Project Memory (Scoped)
 - Lightweight persistent project summary + architecture notes that survive sessions.
 - Used to prime future runs and reduce repeated context rebuilding.
 
-7. Sub-Agent Framework (Minimal)
+[ ] 7. Sub-Agent Framework (Minimal)
 - Introduce a simple manager/worker abstraction for long tasks (planner agent + executor agent).
 - Keep initial version behind a feature flag.
 
