docs: update v1.0.2 status for transparency and autonomy

--- a/1.0.2.md
+++ b/1.0.2.md
@@ -13,13 +13,22 @@ Define a focused, high-impact feature set for `v1.0.2` based on what developers 
 - [x] P0.2 Agent Anti-Stall + Auto-Recovery
   - Shipped in `e81c073` (`feat: add anti-stall recovery with auto-finalize fallback`)
   - Detects repeated tool loops, no-progress streaks, and stream timeouts; applies backoff and recovery.
+- [x] P0.3 Execution Transparency Panel
+  - Shipped in `c567b20` (`feat: add execution transparency panel and autonomy enforcement`)
+  - Shows active model/provider, current step, elapsed runtime, token/cost estimate, recent tool calls, and "why this action".
+- [x] P0.4 Safer Autonomy Modes
+  - Shipped in `c567b20` (`feat: add execution transparency panel and autonomy enforcement`)
+  - Adds `read-only`, `review-required`, `auto-apply-safe`, `full-auto` with runtime enforcement and persisted mode selection.
 - [~] P0.5 Reliability Guardrails for Web/Tool Tasks (partial)
   - Strict tool schema compatibility fix landed (`83b7857`) for `web_search` schema validation issues.
   - Remaining work: full cross-provider regression suite and compatibility matrix.
-- [ ] P0.3 Execution Transparency Panel
-- [ ] P0.4 Safer Autonomy Modes
 - [ ] P1.6 Persistent Project Memory (Scoped)
 - [ ] P1.7 Sub-Agent Framework (Minimal)
+- Validation gate for current `main` push:
+  - `pnpm run typecheck` passed
+  - `pnpm run lint` passed
+  - `pnpm test` passed
+  - `pnpm run build:highmem` passed
 
 ## How This Was Researched
 Used Bolt.gives' Playwright-powered web browsing/search service to gather current requests from:
@@ -67,11 +76,11 @@ Used Bolt.gives' Playwright-powered web browsing/search service to gather curren
 - Auto-recover by: retry strategy, tool backoff, summarize-and-continue, or explicit recovery prompt.
 - Show recovery state in commentary timeline.
 
-[ ] 3. Execution Transparency Panel
+[x] 3. Execution Transparency Panel
 - Show: selected model, tool invocations, active step, elapsed time, and token/cost estimate.
 - Include explicit "why this action" snippets for each major step.
 
-[ ] 4. Safer Autonomy Modes
+[x] 4. Safer Autonomy Modes
 - Add clear execution modes: `read-only`, `review-required`, `auto-apply-safe`, `full-auto`.
 - Add per-tool approval policy controls and visible current mode in UI.
 
