feat: complete v1.0.2 guardrails instrumentation and agent memory

--- a/1.0.2.md
+++ b/1.0.2.md
@@ -19,16 +19,29 @@ Define a focused, high-impact feature set for `v1.0.2` based on what developers 
 - [x] P0.4 Safer Autonomy Modes
   - Shipped in `c567b20` (`feat: add execution transparency panel and autonomy enforcement`)
   - Adds `read-only`, `review-required`, `auto-apply-safe`, `full-auto` with runtime enforcement and persisted mode selection.
-- [~] P0.5 Reliability Guardrails for Web/Tool Tasks (partial)
-  - Strict tool schema compatibility fix landed (`83b7857`) for `web_search` schema validation issues.
-  - Remaining work: full cross-provider regression suite and compatibility matrix.
-- [ ] P1.6 Persistent Project Memory (Scoped)
-- [ ] P1.7 Sub-Agent Framework (Minimal)
+- [x] P0.5 Reliability Guardrails for Web/Tool Tasks
+  - Added cross-provider schema regression suite:
+    - `app/lib/.server/llm/tools/tool-schema-compatibility.spec.ts`
+    - `tests/api.system.tool-schema-matrix.spec.ts`
+  - Added live compatibility matrix endpoint: `/api/system/tool-schema-matrix`
+  - Standardized strict-compatible schema validation for `web_search` and `web_browse` across strict and standard provider profiles.
+- [x] P1.6 Persistent Project Memory (Scoped)
+  - Added scoped memory store and reuse pipeline:
+    - `app/lib/.server/llm/project-memory.ts`
+    - persisted client handoff via stream data event `project-memory`
+  - Memory is injected back into build prompts for context reuse.
+- [x] P1.7 Sub-Agent Framework (Minimal)
+  - Added feature-flagged planner/worker flow in `api.chat`:
+    - planner sub-agent pre-plans execution
+    - worker agent executes with plan context
+  - Controlled by `BOLT_SUB_AGENTS_ENABLED=true`.
 - Validation gate for current `main` push:
   - `pnpm run typecheck` passed
   - `pnpm run lint` passed
   - `pnpm test` passed
   - `pnpm run build:highmem` passed
+  - E2E smoke (strict OpenAI path on `https://alpha1.bolt.gives`) passed
+  - E2E smoke (standard OpenAI model path on `https://alpha1.bolt.gives`) passed
 
 ## How This Was Researched
 Used Bolt.gives' Playwright-powered web browsing/search service to gather current requests from:
@@ -84,19 +97,42 @@ Used Bolt.gives' Playwright-powered web browsing/search service to gather curren
 - Add clear execution modes: `read-only`, `review-required`, `auto-apply-safe`, `full-auto`.
 - Add per-tool approval policy controls and visible current mode in UI.
 
-[~] 5. Reliability Guardrails for Web/Tool Tasks
+[x] 5. Reliability Guardrails for Web/Tool Tasks
 - Standardize tool schemas for strict providers.
 - Add robust URL/tool validation and user-facing fallback messages.
 - Add regression tests for schema compatibility across major model families.
 
 ## P1 (Start in v1.0.2, finish in v1.0.3 if needed)
-[ ] 6. Persistent Project Memory (Scoped)
+[x] 6. Persistent Project Memory (Scoped)
 - Lightweight persistent project summary + architecture notes that survive sessions.
 - Used to prime future runs and reduce repeated context rebuilding.
 
-[ ] 7. Sub-Agent Framework (Minimal)
+[x] 7. Sub-Agent Framework (Minimal)
 - Introduce a simple manager/worker abstraction for long tasks (planner agent + executor agent).
 - Keep initial version behind a feature flag.
+
+## Tool Schema Compatibility Matrix (v1.0.2)
+
+| Provider    | Strict Tool Schema | Sample Models                                             | Result |
+| ----------- | ------------------ | --------------------------------------------------------- | ------ |
+| OpenAI      | Yes                | `gpt-5-codex`, `codex-mini-latest`, `gpt-4o`             | Pass   |
+| Anthropic   | No                 | `claude-3-5-sonnet-latest`                               | Pass   |
+| OpenRouter  | No                 | `openrouter/auto`                                         | Pass   |
+| Together    | No                 | `meta-llama/Meta-Llama-3.1-70B-Instruct-Turbo`           | Pass   |
+
+Matrix data and live checks are exposed at:
+- `/api/system/tool-schema-matrix`
+
+## Acceptance Instrumentation (v1.0.2)
+
+Instrumentation now emits and tracks:
+- `commentaryFirstEventLatencyMs`
+- `recoverySuccessRate` (aggregate)
+- `manualInterventionRate` (aggregate)
+
+Available via:
+- stream data event: `run-metrics`
+- system endpoint: `/api/system/agent-metrics`
 
 ## Suggested Acceptance Criteria
 1. Commentary appears within 2 seconds of run start and updates at each meaningful step.
