--- a/1.0.2.md
+++ b/1.0.2.md
@@ -25,6 +25,12 @@ Define a focused, high-impact feature set for `v1.0.2` based on what developers 
     - `tests/api.system.tool-schema-matrix.spec.ts`
   - Added live compatibility matrix endpoint: `/api/system/tool-schema-matrix`
   - Standardized strict-compatible schema validation for `web_search` and `web_browse` across strict and standard provider profiles.
+  - Post-release reliability hardening (2026-02-18):
+    - Added shell-command portability rewrite for `test -f` in Bolt Terminal (`jsh` compatibility).
+    - Added run-continuation guardrail to auto-continue scaffold-only outputs when the user asked to run/preview.
+    - Added regression tests:
+      - `app/lib/runtime/shell-command-utils.spec.ts`
+      - `app/lib/.server/llm/run-continuation.spec.ts`
 - [x] P1.6 Persistent Project Memory (Scoped)
   - Added scoped memory store and reuse pipeline:
     - `app/lib/.server/llm/project-memory.ts`
