fix: require explicit created file paths in final responses

--- a/1.0.2.md
+++ b/1.0.2.md
@@ -28,9 +28,11 @@ Define a focused, high-impact feature set for `v1.0.2` based on what developers 
   - Post-release reliability hardening (2026-02-18):
     - Added shell-command portability rewrite for `test -f` in Bolt Terminal (`jsh` compatibility).
     - Added run-continuation guardrail to auto-continue scaffold-only outputs when the user asked to run/preview.
+    - Added prompt guidance requiring exact created file paths in final responses for file-generation tasks.
     - Added regression tests:
       - `app/lib/runtime/shell-command-utils.spec.ts`
       - `app/lib/.server/llm/run-continuation.spec.ts`
+      - `app/lib/.server/llm/prompt-workstyle.spec.ts`
 - [x] P1.6 Persistent Project Memory (Scoped)
   - Added scoped memory store and reuse pipeline:
     - `app/lib/.server/llm/project-memory.ts`
