docs: surface v1.0.3 roadmap at top of readme

--- a/v1.0.3.md
+++ b/v1.0.3.md
@@ -65,6 +65,41 @@ This release is focused on beating the best current UX patterns (Replit, Loveabl
   - next recovery attempt or user action
 - [ ] Add tests for false-positive completion prevention.
 
+### P0.6 Long-Run Performance De-bloat (Server-First Execution)
+- [ ] Remove/disable heavy client-side work that causes slowdown on long projects.
+- [ ] Move heavy tasks to server-side execution paths where possible:
+  - large file scans/indexing
+  - repo summarization/snapshotting
+  - documentation ingestion/parsing
+  - long-running validation and build orchestration
+- [ ] Keep UI responsive under long sessions by:
+  - virtualizing large lists/feeds
+  - lazy-loading non-critical panels/features
+  - reducing retained in-memory timeline/render payloads
+- [ ] Add runtime telemetry for:
+  - main-thread stall duration
+  - timeline render cost
+  - client memory growth during long runs
+
+### P0.7 Enforced Node Memory Baseline (Install + Upgrade)
+- [ ] Require Node runtime memory floor of at least 4096 MB for supported install paths.
+- [ ] Ensure fresh installs and upgrades auto-apply memory defaults (no manual tuning required).
+- [ ] Add install/upgrade preflight checks that verify `NODE_OPTIONS` includes `--max-old-space-size=4096` (or higher).
+- [ ] Update installation docs and upgrade docs to reflect enforced baseline.
+
+### P0.8 Git-Backed Auto-Update + One-Click Upgrade
+- [ ] Add update monitor that checks remote Git version/tag on an interval and on app start.
+- [ ] Display in-app update notice when a newer version is available.
+- [ ] Provide one-click update flow that performs:
+  - fetch latest
+  - fast-forward/update to target version
+  - dependency install
+  - build/restart
+- [ ] Include safe failure handling:
+  - clear progress + logs
+  - rollback/retry path if update fails
+  - success confirmation with running version
+
 ## P1 (Stretch in v1.0.3, otherwise v1.0.4 carry-over)
 
 - [ ] Commentary density tuning by autonomy mode.
@@ -79,6 +114,9 @@ This release is focused on beating the best current UX patterns (Replit, Loveabl
 4. Failure states include command, exit code, and next recovery step.
 5. Execution footer remains visible and accurate while user scrolls.
 6. No run may emit a final success statement if any critical action failed.
+7. Long-running project sessions remain responsive with no severe client-side stalls.
+8. Fresh install and upgrade both enforce Node memory baseline >= 4096 MB.
+9. Users receive update notifications and can complete an update with one click.
 
 ## Test Plan
 
@@ -91,6 +129,9 @@ This release is focused on beating the best current UX patterns (Replit, Loveabl
   - verify preview renders
   - verify commentary/phase stream quality
 - [ ] E2E smoke on one non-strict provider path.
+- [ ] Performance soak test on long-run project flow (client responsiveness + memory growth budget).
+- [ ] Install/upgrade integration test validating enforced Node memory floor.
+- [ ] E2E update test: detect new version, show banner, apply one-click update, verify version bump.
 
 ## Release Checklist
 
