docs: update v1.0.3 roadmap deliverables

--- a/v1.0.3.md
+++ b/v1.0.3.md
@@ -100,6 +100,24 @@ This release is focused on beating the best current UX patterns (Replit, Loveabl
   - rollback/retry path if update fails
   - success confirmation with running version
 
+### P0.9 Architect Self-Heal + Safety Guard
+- [~] Ship Architect diagnosis + auto-heal scaffolding for known failure signatures.
+- [ ] Expand Architect knowledgebase to cover top build/runtime/package-manager failures.
+- [ ] Ensure Architect auto-heal is mode-aware and obeys safety/autonomy policy.
+- [ ] Add structured recovery timeline events for Architect diagnosis, repair attempt, and outcome.
+
+### P0.10 Cost Estimation Accuracy Across Providers
+- [~] Normalize usage field mappings across provider responses.
+- [ ] Ensure non-zero, accurate cost estimates in timeline/footer whenever usage exists.
+- [ ] Add regression tests for usage normalization and cost calculation paths.
+- [ ] Add E2E validation for strict + standard providers.
+
+### P0.11 Provider/Model/API Key Session Persistence
+- [~] Persist latest working API key/provider/model per instance.
+- [ ] Auto-restore latest working selection on revisit.
+- [ ] Keep provider history navigable so users can switch back to previously working providers.
+- [ ] Add tests for persistence/restore and default-selection replacement rules.
+
 ## P1 (Stretch in v1.0.3, otherwise v1.0.4 carry-over)
 
 - [ ] Commentary density tuning by autonomy mode.
@@ -117,6 +135,9 @@ This release is focused on beating the best current UX patterns (Replit, Loveabl
 7. Long-running project sessions remain responsive with no severe client-side stalls.
 8. Fresh install and upgrade both enforce Node memory baseline >= 4096 MB.
 9. Users receive update notifications and can complete an update with one click.
+10. Architect auto-heals known high-frequency failures and reports recovery attempts in timeline.
+11. API key/provider/model selections persist and restore reliably across revisits.
+12. Cost estimate is non-zero when usage exists and remains consistent with provider usage data.
 
 ## Test Plan
 
@@ -132,6 +153,8 @@ This release is focused on beating the best current UX patterns (Replit, Loveabl
 - [ ] Performance soak test on long-run project flow (client responsiveness + memory growth budget).
 - [ ] Install/upgrade integration test validating enforced Node memory floor.
 - [ ] E2E update test: detect new version, show banner, apply one-click update, verify version bump.
+- [ ] Unit/integration tests for Architect diagnosis routing and auto-heal gating by autonomy mode.
+- [ ] E2E verification of persisted provider/model/key selection and non-zero cost estimation.
 
 ## Release Checklist
 
