fix: improve plain-English commentary cadence and starter template fallback

--- a/1.0.2.md
+++ b/1.0.2.md
@@ -50,6 +50,14 @@ Define a focused, high-impact feature set for `v1.0.2` based on what developers 
   - `pnpm run build:highmem` passed
   - E2E smoke (strict OpenAI path on `https://alpha1.bolt.gives`) passed
   - E2E smoke (standard OpenAI model path on `https://alpha1.bolt.gives`) passed
+- Post-release hardening (2026-02-20):
+  - Added plain-English commentary normalization and 60-second heartbeat updates for long-running tasks.
+  - Moved checkpoint command diagnostics behind a collapsible technical-details section in timeline UI.
+  - Added built-in local fallback templates for every listed starter framework when remote template fetch fails.
+  - Added regression tests for:
+    - commentary heartbeat behavior
+    - update-manager runtime error sanitization
+    - template fallback path
 
 ## How This Was Researched
 Used Bolt.gives' Playwright-powered web browsing/search service to gather current requests from:
